// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders NHSNotifyRadioButtonForm - handles validation errors for other fields 1`] = `
<DocumentFragment>
  <form
    action="/action"
  >
    <input
      name="form-id"
      readonly=""
      type="hidden"
      value="form-id"
    />
    <input
      name="csrf_token"
      readonly=""
      type="hidden"
      value="no_token"
    />
    <div
      class="nhsuk-form-group"
    >
      <fieldset
        class="nhsuk-fieldset"
      >
        <legend
          class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
          data-testid="radios-id-form__legend"
        >
          <h1
            class="nhsuk-fieldset__heading"
          >
            Page heading
          </h1>
        </legend>
        <div
          class="nhsuk-form-group"
        >
          <div
            class="nhsuk-radios"
            id="radios-id"
          >
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="option-1-radio"
                id="radios-id-option-1"
                name="radios-id"
                type="radio"
                value="option-1"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="radios-id-option-1"
                id="radios-id-option-1--label"
              >
                option 1
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="option-2-radio"
                id="radios-id-option-2"
                name="radios-id"
                type="radio"
                value="option-2"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="radios-id-option-2"
                id="radios-id-option-2--label"
              >
                option 2
              </label>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
    <div
      class="nhsuk-card nhsuk-card--warning nhsuk-u-reading-width"
    >
      <div
        class="nhsuk-card__content"
      >
        <h4
          class="nhsuk-card__heading"
        >
          To create a letter template
        </h4>
        <p
          class="nhsuk-card__description nhsuk-u-margin-top-3 nhsuk-u-margin-bottom-6"
        >
          You cannot upload a letter template using this service.
        </p>
        <p
          class="nhsuk-card__description"
        >
          Follow our guidance to 
          <a
            href="https://notify.nhs.uk/using-nhs-notify/upload-a-letter"
            rel="noopener noreferrer"
            target="_blank"
          >
            upload a letter template (opens in a new tab)
          </a>
        </p>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button"
      data-testid="submit-button"
      id="form-id-submit-button"
      type="submit"
    >
      Continue
    </button>
  </form>
</DocumentFragment>
`;

exports[`Renders NHSNotifyRadioButtonForm - renders without validation error field 1`] = `
<DocumentFragment>
  <form
    action="/action"
  >
    <input
      name="form-id"
      readonly=""
      type="hidden"
      value="form-id"
    />
    <input
      name="csrf_token"
      readonly=""
      type="hidden"
      value="no_token"
    />
    <div
      class="nhsuk-form-group"
    >
      <fieldset
        class="nhsuk-fieldset"
      >
        <legend
          class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
          data-testid="radios-id-form__legend"
        >
          <h1
            class="nhsuk-fieldset__heading"
          >
            Page heading
          </h1>
        </legend>
        <div
          class="nhsuk-form-group"
        >
          <div
            class="nhsuk-radios"
            id="radios-id"
          >
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="option-1-radio"
                id="radios-id-option-1"
                name="radios-id"
                type="radio"
                value="option-1"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="radios-id-option-1"
                id="radios-id-option-1--label"
              >
                option 1
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="option-2-radio"
                id="radios-id-option-2"
                name="radios-id"
                type="radio"
                value="option-2"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="radios-id-option-2"
                id="radios-id-option-2--label"
              >
                option 2
              </label>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
    <div
      class="nhsuk-card nhsuk-card--warning nhsuk-u-reading-width"
    >
      <div
        class="nhsuk-card__content"
      >
        <h4
          class="nhsuk-card__heading"
        >
          To create a letter template
        </h4>
        <p
          class="nhsuk-card__description nhsuk-u-margin-top-3 nhsuk-u-margin-bottom-6"
        >
          You cannot upload a letter template using this service.
        </p>
        <p
          class="nhsuk-card__description"
        >
          Follow our guidance to 
          <a
            href="https://notify.nhs.uk/using-nhs-notify/upload-a-letter"
            rel="noopener noreferrer"
            target="_blank"
          >
            upload a letter template (opens in a new tab)
          </a>
        </p>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button"
      data-testid="submit-button"
      id="form-id-submit-button"
      type="submit"
    >
      Continue
    </button>
  </form>
</DocumentFragment>
`;

exports[`Renders NHSNotifyRadioButtonForm correctly with errors 1`] = `
<DocumentFragment>
  <form
    action="/action"
  >
    <input
      name="form-id"
      readonly=""
      type="hidden"
      value="form-id"
    />
    <input
      name="csrf_token"
      readonly=""
      type="hidden"
      value="no_token"
    />
    <div
      class="nhsuk-form-group nhsuk-form-group--error"
    >
      <fieldset
        class="nhsuk-fieldset"
      >
        <legend
          class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
          data-testid="radios-id-form__legend"
        >
          <h1
            class="nhsuk-fieldset__heading"
          >
            Page heading
          </h1>
        </legend>
        <div
          class="nhsuk-form-group nhsuk-form-group--error"
        >
          <span
            class="nhsuk-error-message"
            id="radios-id--error-message"
          >
            <span
              class="nhsuk-u-visually-hidden"
            >
              Error: 
            </span>
            Field error
          </span>
          <div
            aria-describedby="radios-id--error-message"
            class="nhsuk-radios"
            id="radios-id"
          >
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="option-1-radio"
                id="radios-id-option-1"
                name="radios-id"
                type="radio"
                value="option-1"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="radios-id-option-1"
                id="radios-id-option-1--label"
              >
                option 1
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="option-2-radio"
                id="radios-id-option-2"
                name="radios-id"
                type="radio"
                value="option-2"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="radios-id-option-2"
                id="radios-id-option-2--label"
              >
                option 2
              </label>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
    <div
      class="nhsuk-card nhsuk-card--warning nhsuk-u-reading-width"
    >
      <div
        class="nhsuk-card__content"
      >
        <h4
          class="nhsuk-card__heading"
        >
          To create a letter template
        </h4>
        <p
          class="nhsuk-card__description nhsuk-u-margin-top-3 nhsuk-u-margin-bottom-6"
        >
          You cannot upload a letter template using this service.
        </p>
        <p
          class="nhsuk-card__description"
        >
          Follow our guidance to 
          <a
            href="https://notify.nhs.uk/using-nhs-notify/upload-a-letter"
            rel="noopener noreferrer"
            target="_blank"
          >
            upload a letter template (opens in a new tab)
          </a>
        </p>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button"
      data-testid="submit-button"
      id="form-id-submit-button"
      type="submit"
    >
      Continue
    </button>
  </form>
</DocumentFragment>
`;

exports[`Renders NHSNotifyRadioButtonForm correctly without errors 1`] = `
<DocumentFragment>
  <form
    action="/action"
  >
    <input
      name="form-id"
      readonly=""
      type="hidden"
      value="form-id"
    />
    <input
      name="csrf_token"
      readonly=""
      type="hidden"
      value="no_token"
    />
    <div
      class="nhsuk-form-group"
    >
      <fieldset
        class="nhsuk-fieldset"
      >
        <legend
          class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
          data-testid="radios-id-form__legend"
        >
          <h1
            class="nhsuk-fieldset__heading"
          >
            Page heading
          </h1>
        </legend>
        <div
          class="nhsuk-form-group"
        >
          <div
            class="nhsuk-hint"
            id="radios-id--hint"
          >
            Example hint
          </div>
          <div
            aria-describedby="radios-id--hint"
            class="nhsuk-radios"
            id="radios-id"
          >
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="option-1-radio"
                id="radios-id-option-1"
                name="radios-id"
                type="radio"
                value="option-1"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="radios-id-option-1"
                id="radios-id-option-1--label"
              >
                option 1
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="option-2-radio"
                id="radios-id-option-2"
                name="radios-id"
                type="radio"
                value="option-2"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="radios-id-option-2"
                id="radios-id-option-2--label"
              >
                option 2
              </label>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
    <div
      class="nhsuk-card nhsuk-card--warning nhsuk-u-reading-width"
    >
      <div
        class="nhsuk-card__content"
      >
        <h4
          class="nhsuk-card__heading"
        >
          To create a letter template
        </h4>
        <p
          class="nhsuk-card__description nhsuk-u-margin-top-3 nhsuk-u-margin-bottom-6"
        >
          You cannot upload a letter template using this service.
        </p>
        <p
          class="nhsuk-card__description"
        >
          Follow our guidance to 
          <a
            href="https://notify.nhs.uk/using-nhs-notify/upload-a-letter"
            rel="noopener noreferrer"
            target="_blank"
          >
            upload a letter template (opens in a new tab)
          </a>
        </p>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button"
      data-testid="submit-button"
      id="form-id-submit-button"
      type="submit"
    >
      Continue
    </button>
  </form>
</DocumentFragment>
`;

exports[`Renders NHSNotifyRadioButtonForm with conditional content for a radio option 1`] = `
<DocumentFragment>
  <form
    action="/action"
  >
    <input
      name="form-id"
      readonly=""
      type="hidden"
      value="form-id"
    />
    <input
      name="csrf_token"
      readonly=""
      type="hidden"
      value="no_token"
    />
    <div
      class="nhsuk-form-group"
    >
      <fieldset
        class="nhsuk-fieldset"
      >
        <legend
          class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
          data-testid="radios-id-form__legend"
        >
          <h1
            class="nhsuk-fieldset__heading"
          >
            Page heading
          </h1>
        </legend>
        <div
          class="nhsuk-form-group"
        >
          <div
            class="nhsuk-radios"
            id="radios-id"
          >
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="option-1-radio"
                id="radios-id-option-1"
                name="radios-id"
                type="radio"
                value="option-1"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="radios-id-option-1"
                id="radios-id-option-1--label"
              >
                option 1
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                checked=""
                class="nhsuk-radios__input"
                data-testid="option-2-radio"
                id="radios-id-option-2"
                name="radios-id"
                type="radio"
                value="option-2"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="radios-id-option-2"
                id="radios-id-option-2--label"
              >
                option 2
              </label>
            </div>
            <div
              class="nhsuk-radios__conditional"
              id="radios-id-option-2--conditional"
            >
              <div
                data-testid="conditional-content"
              >
                <p>
                  This is conditional content
                </p>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
    <div
      class="nhsuk-card nhsuk-card--warning nhsuk-u-reading-width"
    >
      <div
        class="nhsuk-card__content"
      >
        <h4
          class="nhsuk-card__heading"
        >
          To create a letter template
        </h4>
        <p
          class="nhsuk-card__description nhsuk-u-margin-top-3 nhsuk-u-margin-bottom-6"
        >
          You cannot upload a letter template using this service.
        </p>
        <p
          class="nhsuk-card__description"
        >
          Follow our guidance to 
          <a
            href="https://notify.nhs.uk/using-nhs-notify/upload-a-letter"
            rel="noopener noreferrer"
            target="_blank"
          >
            upload a letter template (opens in a new tab)
          </a>
        </p>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button"
      data-testid="submit-button"
      id="form-id-submit-button"
      type="submit"
    >
      Continue
    </button>
  </form>
</DocumentFragment>
`;

exports[`Renders NHSNotifyRadioButtonForm with conditional radios and validation error on nested field 1`] = `
<DocumentFragment>
  <form
    action="/action"
  >
    <input
      name="form-id"
      readonly=""
      type="hidden"
      value="form-id"
    />
    <input
      name="csrf_token"
      readonly=""
      type="hidden"
      value="no_token"
    />
    <div
      class="nhsuk-form-group nhsuk-form-group--error"
    >
      <fieldset
        class="nhsuk-fieldset"
      >
        <legend
          class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
          data-testid="radios-id-form__legend"
        >
          <h1
            class="nhsuk-fieldset__heading"
          >
            Page heading
          </h1>
        </legend>
        <div
          class="nhsuk-form-group"
        >
          <div
            class="nhsuk-radios"
            id="radios-id"
          >
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="option-1-radio"
                id="radios-id-option-1"
                name="radios-id"
                type="radio"
                value="option-1"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="radios-id-option-1"
                id="radios-id-option-1--label"
              >
                option 1
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                checked=""
                class="nhsuk-radios__input"
                data-testid="option-2-radio"
                id="radios-id-option-2"
                name="radios-id"
                type="radio"
                value="option-2"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="radios-id-option-2"
                id="radios-id-option-2--label"
              >
                option 2
              </label>
            </div>
            <div
              class="nhsuk-radios__conditional"
              id="radios-id-option-2--conditional"
            >
              <div
                class="nhsuk-form-group nhsuk-form-group--error"
              >
                <span
                  class="nhsuk-error-message"
                  id="nested-radios--error-message"
                >
                  <span
                    class="nhsuk-u-visually-hidden"
                  >
                    Error: 
                  </span>
                  Please select a nested option
                </span>
                <div
                  aria-describedby="nested-radios--error-message"
                  class="nhsuk-radios"
                  data-testid="nested-radios"
                  id="nested-radios"
                >
                  <div
                    class="nhsuk-radios__item"
                  >
                    <input
                      class="nhsuk-radios__input"
                      id="nested-1"
                      name="nested-radios"
                      type="radio"
                      value="nested-1"
                    />
                    <label
                      class="nhsuk-label nhsuk-radios__label"
                      for="nested-1"
                      id="nested-1--label"
                    >
                      Nested option 1
                    </label>
                  </div>
                  <div
                    class="nhsuk-radios__item"
                  >
                    <input
                      class="nhsuk-radios__input"
                      id="nested-2"
                      name="nested-radios"
                      type="radio"
                      value="nested-2"
                    />
                    <label
                      class="nhsuk-label nhsuk-radios__label"
                      for="nested-2"
                      id="nested-2--label"
                    >
                      Nested option 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
    <div
      class="nhsuk-card nhsuk-card--warning nhsuk-u-reading-width"
    >
      <div
        class="nhsuk-card__content"
      >
        <h4
          class="nhsuk-card__heading"
        >
          To create a letter template
        </h4>
        <p
          class="nhsuk-card__description nhsuk-u-margin-top-3 nhsuk-u-margin-bottom-6"
        >
          You cannot upload a letter template using this service.
        </p>
        <p
          class="nhsuk-card__description"
        >
          Follow our guidance to 
          <a
            href="https://notify.nhs.uk/using-nhs-notify/upload-a-letter"
            rel="noopener noreferrer"
            target="_blank"
          >
            upload a letter template (opens in a new tab)
          </a>
        </p>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button"
      data-testid="submit-button"
      id="form-id-submit-button"
      type="submit"
    >
      Continue
    </button>
  </form>
</DocumentFragment>
`;

exports[`Renders NHSNotifyRadioButtonForm with learn more link 1`] = `
<DocumentFragment>
  <form
    action="/action"
  >
    <input
      name="form-id"
      readonly=""
      type="hidden"
      value="form-id"
    />
    <input
      name="csrf_token"
      readonly=""
      type="hidden"
      value="no_token"
    />
    <div
      class="nhsuk-form-group"
    >
      <fieldset
        class="nhsuk-fieldset"
      >
        <legend
          class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
          data-testid="radios-id-form__legend"
        >
          <h1
            class="nhsuk-fieldset__heading"
          >
            Page heading
          </h1>
        </legend>
        <p>
          <a
            href="/features"
            rel="noopener noreferrer"
            target="_blank"
          >
            learn more
          </a>
        </p>
        <div
          class="nhsuk-form-group"
        >
          <div
            class="nhsuk-hint"
            id="radios-id--hint"
          >
            Example hint
          </div>
          <div
            aria-describedby="radios-id--hint"
            class="nhsuk-radios"
            id="radios-id"
          >
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="option-1-radio"
                id="radios-id-option-1"
                name="radios-id"
                type="radio"
                value="option-1"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="radios-id-option-1"
                id="radios-id-option-1--label"
              >
                option 1
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="option-2-radio"
                id="radios-id-option-2"
                name="radios-id"
                type="radio"
                value="option-2"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="radios-id-option-2"
                id="radios-id-option-2--label"
              >
                option 2
              </label>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
    <div
      class="nhsuk-card nhsuk-card--warning nhsuk-u-reading-width"
    >
      <div
        class="nhsuk-card__content"
      >
        <h4
          class="nhsuk-card__heading"
        >
          To create a letter template
        </h4>
        <p
          class="nhsuk-card__description nhsuk-u-margin-top-3 nhsuk-u-margin-bottom-6"
        >
          You cannot upload a letter template using this service.
        </p>
        <p
          class="nhsuk-card__description"
        >
          Follow our guidance to 
          <a
            href="https://notify.nhs.uk/using-nhs-notify/upload-a-letter"
            rel="noopener noreferrer"
            target="_blank"
          >
            upload a letter template (opens in a new tab)
          </a>
        </p>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button"
      data-testid="submit-button"
      id="form-id-submit-button"
      type="submit"
    >
      Continue
    </button>
  </form>
</DocumentFragment>
`;

exports[`Renders NHSNotifyRadioButtonForm with nested conditional radio buttons 1`] = `
<DocumentFragment>
  <form
    action="/action"
  >
    <input
      name="form-id"
      readonly=""
      type="hidden"
      value="form-id"
    />
    <input
      name="csrf_token"
      readonly=""
      type="hidden"
      value="no_token"
    />
    <div
      class="nhsuk-form-group"
    >
      <fieldset
        class="nhsuk-fieldset"
      >
        <legend
          class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
          data-testid="radios-id-form__legend"
        >
          <h1
            class="nhsuk-fieldset__heading"
          >
            Page heading
          </h1>
        </legend>
        <div
          class="nhsuk-form-group"
        >
          <div
            class="nhsuk-radios"
            id="radios-id"
          >
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="option-1-radio"
                id="radios-id-option-1"
                name="radios-id"
                type="radio"
                value="option-1"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="radios-id-option-1"
                id="radios-id-option-1--label"
              >
                option 1
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                checked=""
                class="nhsuk-radios__input"
                data-testid="option-2-radio"
                id="radios-id-option-2"
                name="radios-id"
                type="radio"
                value="option-2"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="radios-id-option-2"
                id="radios-id-option-2--label"
              >
                option 2
              </label>
            </div>
            <div
              class="nhsuk-radios__conditional"
              id="radios-id-option-2--conditional"
            >
              <div
                class="nhsuk-form-group"
              >
                <div
                  class="nhsuk-radios"
                  data-testid="nested-radios"
                  id="nested-radios"
                >
                  <div
                    class="nhsuk-radios__item"
                  >
                    <input
                      class="nhsuk-radios__input"
                      id="nested-1"
                      name="nested-radios"
                      type="radio"
                      value="nested-1"
                    />
                    <label
                      class="nhsuk-label nhsuk-radios__label"
                      for="nested-1"
                      id="nested-1--label"
                    >
                      Nested option 1
                    </label>
                  </div>
                  <div
                    class="nhsuk-radios__item"
                  >
                    <input
                      class="nhsuk-radios__input"
                      id="nested-2"
                      name="nested-radios"
                      type="radio"
                      value="nested-2"
                    />
                    <label
                      class="nhsuk-label nhsuk-radios__label"
                      for="nested-2"
                      id="nested-2--label"
                    >
                      Nested option 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
    <div
      class="nhsuk-card nhsuk-card--warning nhsuk-u-reading-width"
    >
      <div
        class="nhsuk-card__content"
      >
        <h4
          class="nhsuk-card__heading"
        >
          To create a letter template
        </h4>
        <p
          class="nhsuk-card__description nhsuk-u-margin-top-3 nhsuk-u-margin-bottom-6"
        >
          You cannot upload a letter template using this service.
        </p>
        <p
          class="nhsuk-card__description"
        >
          Follow our guidance to 
          <a
            href="https://notify.nhs.uk/using-nhs-notify/upload-a-letter"
            rel="noopener noreferrer"
            target="_blank"
          >
            upload a letter template (opens in a new tab)
          </a>
        </p>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button"
      data-testid="submit-button"
      id="form-id-submit-button"
      type="submit"
    >
      Continue
    </button>
  </form>
</DocumentFragment>
`;

exports[`Renders NHSNotifyRadioButtonForm without learn more link if learnMoreLink is not provided 1`] = `
<DocumentFragment>
  <form
    action="/action"
  >
    <input
      name="form-id"
      readonly=""
      type="hidden"
      value="form-id"
    />
    <input
      name="csrf_token"
      readonly=""
      type="hidden"
      value="no_token"
    />
    <div
      class="nhsuk-form-group"
    >
      <fieldset
        class="nhsuk-fieldset"
      >
        <legend
          class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
          data-testid="radios-id-form__legend"
        >
          <h1
            class="nhsuk-fieldset__heading"
          >
            Page heading
          </h1>
        </legend>
        <div
          class="nhsuk-form-group"
        >
          <div
            class="nhsuk-hint"
            id="radios-id--hint"
          >
            Example hint
          </div>
          <div
            aria-describedby="radios-id--hint"
            class="nhsuk-radios"
            id="radios-id"
          >
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="option-1-radio"
                id="radios-id-option-1"
                name="radios-id"
                type="radio"
                value="option-1"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="radios-id-option-1"
                id="radios-id-option-1--label"
              >
                option 1
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="option-2-radio"
                id="radios-id-option-2"
                name="radios-id"
                type="radio"
                value="option-2"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="radios-id-option-2"
                id="radios-id-option-2--label"
              >
                option 2
              </label>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
    <div
      class="nhsuk-card nhsuk-card--warning nhsuk-u-reading-width"
    >
      <div
        class="nhsuk-card__content"
      >
        <h4
          class="nhsuk-card__heading"
        >
          To create a letter template
        </h4>
        <p
          class="nhsuk-card__description nhsuk-u-margin-top-3 nhsuk-u-margin-bottom-6"
        >
          You cannot upload a letter template using this service.
        </p>
        <p
          class="nhsuk-card__description"
        >
          Follow our guidance to 
          <a
            href="https://notify.nhs.uk/using-nhs-notify/upload-a-letter"
            rel="noopener noreferrer"
            target="_blank"
          >
            upload a letter template (opens in a new tab)
          </a>
        </p>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button"
      data-testid="submit-button"
      id="form-id-submit-button"
      type="submit"
    >
      Continue
    </button>
  </form>
</DocumentFragment>
`;

exports[`Renders NHSNotifyRadioButtonForm without learn more link if learnMoreText is not provided 1`] = `
<DocumentFragment>
  <form
    action="/action"
  >
    <input
      name="form-id"
      readonly=""
      type="hidden"
      value="form-id"
    />
    <input
      name="csrf_token"
      readonly=""
      type="hidden"
      value="no_token"
    />
    <div
      class="nhsuk-form-group"
    >
      <fieldset
        class="nhsuk-fieldset"
      >
        <legend
          class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l"
          data-testid="radios-id-form__legend"
        >
          <h1
            class="nhsuk-fieldset__heading"
          >
            Page heading
          </h1>
        </legend>
        <div
          class="nhsuk-form-group"
        >
          <div
            class="nhsuk-hint"
            id="radios-id--hint"
          >
            Example hint
          </div>
          <div
            aria-describedby="radios-id--hint"
            class="nhsuk-radios"
            id="radios-id"
          >
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="option-1-radio"
                id="radios-id-option-1"
                name="radios-id"
                type="radio"
                value="option-1"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="radios-id-option-1"
                id="radios-id-option-1--label"
              >
                option 1
              </label>
            </div>
            <div
              class="nhsuk-radios__item"
            >
              <input
                class="nhsuk-radios__input"
                data-testid="option-2-radio"
                id="radios-id-option-2"
                name="radios-id"
                type="radio"
                value="option-2"
              />
              <label
                class="nhsuk-label nhsuk-radios__label"
                for="radios-id-option-2"
                id="radios-id-option-2--label"
              >
                option 2
              </label>
            </div>
          </div>
        </div>
      </fieldset>
    </div>
    <div
      class="nhsuk-card nhsuk-card--warning nhsuk-u-reading-width"
    >
      <div
        class="nhsuk-card__content"
      >
        <h4
          class="nhsuk-card__heading"
        >
          To create a letter template
        </h4>
        <p
          class="nhsuk-card__description nhsuk-u-margin-top-3 nhsuk-u-margin-bottom-6"
        >
          You cannot upload a letter template using this service.
        </p>
        <p
          class="nhsuk-card__description"
        >
          Follow our guidance to 
          <a
            href="https://notify.nhs.uk/using-nhs-notify/upload-a-letter"
            rel="noopener noreferrer"
            target="_blank"
          >
            upload a letter template (opens in a new tab)
          </a>
        </p>
      </div>
    </div>
    <button
      aria-disabled="false"
      class="nhsuk-button"
      data-testid="submit-button"
      id="form-id-submit-button"
      type="submit"
    >
      Continue
    </button>
  </form>
</DocumentFragment>
`;
